Fix gallery over header and navbar jump on wrong session problems

--- a/DentalWebsiteProject/DentalWebsite/src/app/contact/contact.component.css
+++ b/DentalWebsiteProject/DentalWebsite/src/app/contact/contact.component.css
@@ -4,20 +4,20 @@
 }
 
 /* Contact section */
-#contact-list .container {
+.bg-light .container {
     max-width: 1100px;
     margin: auto;
     display: flex;
     flex-direction: column;
 }
 
-#contact-list .container h1 {
+.bg-light .container h1 {
     padding: 1.5rem;
     font-size: 2.5rem;
     color: var(--dark_turquoise);
 }
 
-#contact-list .container .box-container {
+.bg-light .container .box-container {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
