--- a/DentalWebsiteProject/DentalWebsite/src/app/navbar/navbar.component.css
+++ b/DentalWebsiteProject/DentalWebsite/src/app/navbar/navbar.component.css
@@ -7,6 +7,7 @@ nav
     margin-left: auto;
     vertical-align: center;
     height: 60px;
+    z-index: 1; 
 }
 
 nav ul
