--- a/DentalWebsiteProject/DentalWebsite/src/app/slideshow/slideshow.component.css
+++ b/DentalWebsiteProject/DentalWebsite/src/app/slideshow/slideshow.component.css
@@ -15,7 +15,7 @@
 .cim {
   margin-bottom: 20px;
   text-align: center;
-  font-size: 16px;
+  font-size: 40px;
   color: white;
   background-color: #01b9b0;
 }
